k8s/k3s/docker-registry/docker-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: docker-registry
  labels:
    name: docker-registry
