k8s/k3s/docker-registry/docker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
        name: docker-registry
    spec:
      containers:
      - name: docker-registry
        image: registry:2
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: registry-volume
          mountPath: /var/lib/registry
          subPath: registry
      volumes:
        - name: registry-volume
          persistentVolumeClaim:
            claimName: docker-registry-pvc
